--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=4.0.0",
+    "evaluate>=0.4.5",
+    "huggingface-hub>=0.34.4",
+    "librosa>=0.11.0",
+    "numpy>=2.2.6",
     "python-dotenv>=1.1.1",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "transformers>=4.56.0",
+    "wandb>=0.21.3",
 ]
