--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ dependencies = [
     "datasets>=4.0.0",
     "evaluate>=0.4.5",
     "huggingface-hub>=0.34.4",
+    "jiwer>=4.0.0",
     "librosa>=0.11.0",
     "numpy>=2.2.6",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
+    "torchcodec>=0.6.0",
     "transformers>=4.56.0",
     "trl>=0.22.1",
     "wandb>=0.21.3",
